test/tests/compiler/6_statements_and_conditional_expressions/valid/lh_assignment.plx
pub fn main(none) i32 {
    x: i32 = 10
    y: i32 = 0
    y = ? (x = 5) then x else 2
    return (x == 5 and y == 5
        )
}
