test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/extra_credit/label_expression_clause.plx
pub fn main(none) i32 {
    1 and label label1
    2
}
